fix size on tablet

--- a/css/style.scss
+++ b/css/style.scss
@@ -350,7 +350,7 @@ button {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .container {
     max-width: 512px;
   }
